--- a/support.html
+++ b/support.html
@@ -42,30 +42,19 @@
         <header>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-lg-6">
                         <a href="./index.html">
                             <img src="./images/acadepro_logo.svg" id="logo">
                         </a>
                     </div>
-                    <div class="col-lg-8">
-                        <ul class="nav-top row align-items-end">
-                            <li class="col-lg-2">
-                                <a href="./index">Home</a>
-                            </li>
-                            <li class="col-lg-2">
-                                <a href="./about">About</a>
-                            </li>
-                            <li class="col-lg-2">
-                                <a href="./products">Products</a>
-                            </li>
-                            <li class="col-lg-2">
-                                <a href="./support">Support</a>
-                            </li>
-                            <li class="col-lg-2">
-                                <a href="./contact">Contact</a>
-                            </li>
-                            <li class="col-lg-2">
-                                <a href="./be-a-part" style="font-weight: bold;">Be a part</a>
+                    <div class="col-lg-6">
+                        <ul class="nav-top row align-items-center" style="padding-right: 0; padding-left: 0;">
+                            <li class="col-lg-12">
+                                <a href="./about" style="padding-left: 10px; padding-right: 10px;">About</a>
+                                <a href="./products" style="padding-left: 10px; padding-right: 10px;">Products</a>
+                                <a href="./support" style="padding-left: 10px; padding-right: 10px;">Support</a>
+                                <a href="./be-a-part" style="padding-left: 10px; padding-right: 10px;">Be a part of Acade</a>
+                                <a href="./contact" style="padding-left: 10px; padding-right: 10px;">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -75,26 +64,21 @@
 
         <nav>
             <ul class="nav-mobile">
-                <li class="col-lg-2">
-                    <a href="./index">Home</a>
-                </li>
-                <li class="col-lg-2">
-                    <a href="./about">About</a>
-                </li>
-                <li class="col-lg-2">
-                    <a href="./products">Products</a>
-                </li>
-                <li class="col-lg-2">
-                    <a href="./support">Support</a>
-                </li>
-                <li class="col-lg-2">
-                    <a href="./contact">Contact</a>
-                </li>
-                <li class="col-lg-2">
-                    <a href="./be-a-part" style="font-weight: bold;">Be a Part</a>
+                <li class="col-lg-12" style="text-align: center;">
+                    <a href="./about" style="margin: 10px 0; padding: 10px 10px;">About</a><br>
+                    <a href="./products" style="margin: 10px 0; padding: 10px 10px;">Products</a><br>
+                    <a href="./support" style="margin: 10px 0; padding: 10px 10px;">Support</a><br>
+                    <a href="./be-a-part" style="margin: 10px 0; padding: 10px 10px;">Be a part of Acade</a><br>
+                    <a href="./contact" style="margin: 10px 0; padding: 10px 10px;">Contact</a><br>
                 </li>
             </ul>
         </nav>
+
+        <script>
+            $("#nav-toggle").click(function() {
+                $("nav").toggle();
+            });
+        </script>
 
         <script>
             $("#nav-toggle").click(function() {
@@ -138,17 +122,17 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-5">
-                            <i class="fa fa-phone-square"></i>&ensp;<a href="#">0294-2980503</a>
-                            <br>
-                            <i class="fa fa-envelope-square"></i>&ensp;<a href="mailto:info@creatick.in">info@creatick.in</a>
-                            <br><br>
-                            <a href="#"><i class="fa fa-facebook social"></i></a>
-                            <a href="#"><i class="fa fa-twitter social"></i></a>
-                            <a href="#"><i class="fa fa-youtube social"></i></a>
-                            <a href="#"><i class="fa fa-linkedin social"></i></a>
+                            <img src="./images/acadepro_logo.svg" class="footer-logo">
+                            <br><br> AcadePro is an Application which simplifies the Academics Needs and with a vision of making it dexterous for Institutes to convey all the information related to institute/students among Parents, Staff and Management.
                             <br><br>
                         </div>
-                        <div class="col-md-5 fp">
+                        <div class="col-md-1"></div>
+                        <div class="col-md-3">
+                            <h2 class="footer-title">
+                                Quick Links
+                            </h2>
+
+                            <br>
                             <a href="./be-a-part">Partner Programs</a>
                             <br>
                             <a href="./faq">FAQs</a>
@@ -160,7 +144,21 @@
                             <a href="./under-maintaince">Branch Locator</a>
                             <br><br>
                         </div>
-                        <div class="col-md-5">
+                        <div class="col-md-3">
+                            <h2 class="footer-title">
+                                Follow Us
+                            </h2>
+
+                            <br>
+                            <i class="fa fa-phone-square"></i>&ensp;<a href="#">0294-2980503</a>
+                            <br>
+                            <i class="fa fa-envelope-square"></i>&ensp;<a href="mailto:info@creatick.in">info@creatick.in</a>
+                            <br><br>
+                            <a href="https://www.facebook.com/AcadePro-177176359499277/"><i class="fa fa-facebook social"></i></a>
+                            <a href="https://twitter.com/acade_pro"><i class="fa fa-twitter social"></i></a>
+                            <a href="https://www.instagram.com/acade_pro/"><i class="fa fa-instagram social"></i></a>
+                            <a href="https://www.linkedin.com/in/creatick-udaipur-033b35150/"><i class="fa fa-linkedin social"></i></a>
+                            <br><br>
                         </div>
                     </div>
                     <div class="row">
