Mobile nav was not showing on click. Resolved the issue.

--- a/be-a-part.html
+++ b/be-a-part.html
@@ -80,11 +80,6 @@
             });
         </script>
 
-        <script>
-            $("#nav-toggle").click(function() {
-                $("nav").toggle();
-            });
-        </script>
 
         <!-- Body -->
         <article>
@@ -93,7 +88,7 @@
                     <div class="col-md-12">
                         <h1 class="page-heading">Be a Part of Acade</h1>
                         <div class="row">
-                            <img src="./images/Join-Us.png" class="col-md-4 page-photo-r">
+                            <img src="./images/Join-Us.png" class="col-md-4 page-photo-r" style="max-height: 200px; max-width: 200px;">
                             <p class="col-md-8">
                                 <strong>Expand with Us:</strong>
                                 <br> AcadePro is beyond an Application which gives you the opportunity to be a part of a Revolution that fetches to the coalition an established brand, tested &amp; replicable knowhow, support to the operations. We foresee from our Business Partners rigid entrepreneurial aspect, knowledge of local conditions, hands-on engagement, ethics &amp; compliance of the highest standards.
