Added Home to navabar. Changed contact info at contact page.

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <title>Contact - Acade Pro</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-<link rel="icon" type="image/png" href="./images/icon.png">
+    <link rel="icon" type="image/png" href="./images/icon.png">
     <!-- Bootstrap
     --------------------------->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
@@ -42,14 +42,15 @@
         <header>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-5">
                         <a href="./index.html">
                             <img src="./images/acadepro_logo.svg" id="logo">
                         </a>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-7">
                         <ul class="nav-top row align-items-center" style="padding-right: 0; padding-left: 0;">
                             <li class="col-lg-12">
+                                <a href="./index" style="padding-left: 10px; padding-right: 10px;">Home</a>
                                 <a href="./about" style="padding-left: 10px; padding-right: 10px;">About</a>
                                 <a href="./products" style="padding-left: 10px; padding-right: 10px;">Products</a>
                                 <a href="./support" style="padding-left: 10px; padding-right: 10px;">Support</a>
@@ -65,6 +66,7 @@
         <nav>
             <ul class="nav-mobile">
                 <li class="col-lg-12" style="text-align: center;">
+                    <a href="./index" style="margin: 10px 0; padding: 10px 10px;">Home</a><br>
                     <a href="./about" style="margin: 10px 0; padding: 10px 10px;">About</a><br>
                     <a href="./products" style="margin: 10px 0; padding: 10px 10px;">Products</a><br>
                     <a href="./support" style="margin: 10px 0; padding: 10px 10px;">Support</a><br>
@@ -104,17 +106,16 @@
                     <div class="col-md-6">
                         <div class="row">
                             <div class="col-md-12">
-                               <br>
+                                <br>
                                 <strong class="sub-head">We are always ready to help!</strong>
+                                <br> Contact us any time at:
                                 <br>
-                                Contact us any time at:
+                                <i class="fa fa-phone-square" style="color:#2D559E;"></i>&ensp;<a href="#" class="link-c">0294-2980503</a>
                                 <br>
-                                <i class="fa fa-phone-square" style="color:#2D559E;"></i>&ensp;<a href="#" class="link-c">+91 1234567890</a>
-                                <br>
-                                <i class="fa fa-envelope-square" style="color:#2D559E;"></i>&ensp;<a href="#" class="link-c">someone@example.com</a>
+                                <i class="fa fa-envelope-square" style="color:#2D559E;"></i>&ensp;<a href="mailto:info@creatick.in" class="link-c">info@creatick.in</a>
                             </div>
                         </div>
-                            <br>
+                        <br>
 
                         <div class="row">
                             <iframe src="https://snazzymaps.com/embed/3269" width="100%" height="200px" style="border:none;" class="col-md-12"></iframe>
