--- a/about.html
+++ b/about.html
@@ -43,14 +43,15 @@
         <header>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-5">
                         <a href="./index.html">
                             <img src="./images/acadepro_logo.svg" id="logo">
                         </a>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-7">
                         <ul class="nav-top row align-items-center" style="padding-right: 0; padding-left: 0;">
                             <li class="col-lg-12">
+                                <a href="./index" style="padding-left: 10px; padding-right: 10px;">Home</a>
                                 <a href="./about" style="padding-left: 10px; padding-right: 10px;">About</a>
                                 <a href="./products" style="padding-left: 10px; padding-right: 10px;">Products</a>
                                 <a href="./support" style="padding-left: 10px; padding-right: 10px;">Support</a>
@@ -66,6 +67,7 @@
         <nav>
             <ul class="nav-mobile">
                 <li class="col-lg-12" style="text-align: center;">
+                    <a href="./index" style="margin: 10px 0; padding: 10px 10px;">Home</a><br>
                     <a href="./about" style="margin: 10px 0; padding: 10px 10px;">About</a><br>
                     <a href="./products" style="margin: 10px 0; padding: 10px 10px;">Products</a><br>
                     <a href="./support" style="margin: 10px 0; padding: 10px 10px;">Support</a><br>
@@ -83,41 +85,6 @@
 
         <!-- Body -->
         <article>
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="d-block w-100" src="./images/c1.png" alt="First slide">
-                        <div class="carousel-caption d-md-block">
-                            <h1 class="middle slider-caption heading">All-in-one College and School Management Software</h1>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="./images/c2.png" alt="Second slide">
-                        <div class="carousel-caption d-md-block">
-                            <h1 class="middle slider-caption heading">Automate everything, generate insightful reports, make better &amp; faster decisions</h1>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="./images/c3.png" alt="Third slide">
-                        <div class="carousel-caption d-md-block">
-                            <h1 class="middle slider-caption heading">A New Vision towards Digitally Sound Educational System</h1>
-                        </div>
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-                </a>
-            </div>
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
