--- a/be-a-part.html
+++ b/be-a-part.html
@@ -42,14 +42,15 @@
         <header>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-5">
                         <a href="./index.html">
                             <img src="./images/acadepro_logo.svg" id="logo">
                         </a>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-7">
                         <ul class="nav-top row align-items-center" style="padding-right: 0; padding-left: 0;">
                             <li class="col-lg-12">
+                                <a href="./index" style="padding-left: 10px; padding-right: 10px;">Home</a>
                                 <a href="./about" style="padding-left: 10px; padding-right: 10px;">About</a>
                                 <a href="./products" style="padding-left: 10px; padding-right: 10px;">Products</a>
                                 <a href="./support" style="padding-left: 10px; padding-right: 10px;">Support</a>
@@ -65,6 +66,7 @@
         <nav>
             <ul class="nav-mobile">
                 <li class="col-lg-12" style="text-align: center;">
+                    <a href="./index" style="margin: 10px 0; padding: 10px 10px;">Home</a><br>
                     <a href="./about" style="margin: 10px 0; padding: 10px 10px;">About</a><br>
                     <a href="./products" style="margin: 10px 0; padding: 10px 10px;">Products</a><br>
                     <a href="./support" style="margin: 10px 0; padding: 10px 10px;">Support</a><br>
