--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
                         <br>
 
                         <div class="row">
-                            <iframe src="https://snazzymaps.com/embed/3269" width="100%" height="200px" style="border:none;" class="col-md-12"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3628.142106677058!2d73.70785141442457!3d24.584291462326174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3967e58525b27c81%3A0x82b5bf1d951e6fb6!2sCREATICK!5e0!3m2!1sen!2sin!4v1509631423845" width="100%" height="200px" frameborder="0" style="border:0" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
